gap between the form elements resolved

--- a/src/styles/base/flex.less
+++ b/src/styles/base/flex.less
@@ -141,6 +141,10 @@
   column-gap: 10px !important;
 }
 
+.@{class-prefix}-gap-1r {
+  gap: 1rem !important;
+}
+
 // Order Style
 .@{class-prefix}-order-first {
   -ms-flex-order: -1;
