--- a/src/styles/global/index.less
+++ b/src/styles/global/index.less
@@ -148,7 +148,7 @@
 }
 
 .anticon svg {
-	margin-top: 0.2rem;
+	margin-top: 0.1rem;
 }
 
 .ant-select-arrow,
@@ -156,6 +156,13 @@
 	top: 31%
 }
 
+.ant-picker {
+	margin-bottom : 1rem
+}
+
+.margin-1r{
+	margin-bottom: 1rem;
+}
 
 
 @media (max-width: 514px) {
