--- a/src/styles/ui/form.less
+++ b/src/styles/ui/form.less
@@ -19,6 +19,7 @@
 
       @media screen and (max-width: @screen-xs-max) {
         display: block;
+        margin-bottom: 0;
       }
     }
   }
